updated index building

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Halimat Ayeola-Aina Portfolio<br />
+						<h1>Halimat Ayeola-Aina<br />
 						</h1>
-						<p>I am a results-driven Data Scientist with over 8 years of experience delivering impactful data solutions across consulting, edtech, and government sectors. My expertise lies in Python, Machine Learning, and Artificial Intelligence, with a strong focus on building and deploying predictive models, customer segmentation systems, and intelligent data applications. I’ve applied advanced analytics techniques such as Cohort Analysis, RFM segmentation, and predictive modeling (Random Forest, XGBoost) to real-world projects in retail banking, healthcare, and digital platforms. I have hands-on experience using Streamlit, Gradio, and Hugging Face Spaces to deploy interactive, user-friendly AI solutions. My proficiency with Hugging Face models extends to NLP tasks, including classification, summarization, and conversational agents. I’m also skilled in SQL for data engineering workflows, and Power BI for creating dynamic dashboards. I combine strong technical capabilities with business acumen, enabling me to translate data into actionable insights and bridge the gap between technical teams and decision-makers.
+						<p>Welcome to my Data Science and Analytics Portfolio. I’m a Data Scientist/Analyst with expertise in Python, Machine Learning, and AI, focused on building predictive models, customer segmentation systems, and deploying intelligent applications. This portfolio showcases real-world projects across industries, featuring work in cohort analysis, RFM segmentation, NLP, SQL analytics, and Power BI dashboards. You'll also find deployed apps built with Streamlit, Gradio, and Hugging Face Spaces, reflecting my passion for making data solutions accessible, interactive, and impactful.
 							<a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
